Add stylesheet and back buttons

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -1,4 +1,13 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title></title>
+    <link rel="stylesheet" href="/styles.css">
+  </head>
+ <body> 
 <h1>Easy Lasagna</h1>
+<p> ← <a href="../index.html">Back</a></p>
 <img src="../images/lasagna.jpg" alt="Plate of Lasagna" />
 <p>
   An easy lasagna recipe that saves me lots of time. This dish satisfies
@@ -12,7 +21,7 @@
   <li>3 cups shredded mozzarella cheese, divided</li>
   <li>2 eggs</li>
   <li>½ cup grated Parmesan cheese</li>
-  <li>2 teaspoons dried parsley</li>~
+  <li>2 teaspoons dried parsley</li>
   <li>salt to taste</li>
   <li>ground black pepper to taste</li>
   <li>9 lasagna noodles</li>
@@ -42,3 +51,5 @@
     additional 10 minutes. Let stand 10 minutes before serving.
   </li>
 </ol>
+<p class="nav">Back</p>
+</body>
