--- a/recipes/mac-n-cheese.html
+++ b/recipes/mac-n-cheese.html
@@ -1,4 +1,13 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title></title>
+  
+    <link rel="stylesheet" href="/styles.css">
+  </head>
 <h1>Simple Macaroni & Cheese</h1>
+<p> ← <a href="../index.html">Back</a></p>
 <p>
   Quick, easy, and tasty macaroni and cheese dish. Fancy, designer mac and
   cheese often costs forty or fifty dollars to prepare when you have so many
