--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <title></title>
+
+    <link rel="stylesheet" href="/styles.css">
   </head>
 
   <body>
@@ -12,5 +14,7 @@
       <li><a href="recipes/lasagna.html">Lasagna</a></li>
       <li><a href="recipes/mac-n-cheese.html">Macaroni & Cheese</a></li>
     </ul>
+    <img src="images/odin.png" />
+  
   </body>
 </html>
