--- a/recipes/ragu.html
+++ b/recipes/ragu.html
@@ -1,4 +1,12 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title></title>
+    <link rel="stylesheet" href="/styles.css">
+  </head>
 <h1>North Italian Meat Sauce (Ragu Bolognese)</h1>
+<p> ← <a href="../index.html">Back</a></p>
 <!-- Add a Recipe Image -->
 <img src="../images/ragu.jpg" alt="Bowl of Ragu" />
 <!-- Add a Recipe desciption paragraph-->
